--- a/auction_app-V5/frontend/package.json
+++ b/auction_app-V5/frontend/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@types/vue-router": "^2.0.0",
         "bootstrap": "^5.3.8",
+        "pinia": "^3.0.4",
         "vue": "^3.5.26",
         "vue-router": "^4.6.4"
     },
